[package]
name = "rust_and_tell_showcase"
version = "0.1.0"
authors = ["Bastian Gruber <gruberbastian@me.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
chrono = "0.4.6"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.9.0"