[package]
name = "rust_and_tell_showcase"
version = "0.1.0"
authors = ["Bastian Gruber <gruberbastian@me.com>"]
edition = "2018"

[dependencies]
futures-preview = "0.3.0-alpha.13"
tide = "0.0.5"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.9.0"
serde_urlencoded = "0.5.4"
reqwest = "0.9.11"
ramhorns = "0.4"
http = "0.1"
serde_json = "1.0"